--- a/OscGuiControl/OscInspectorGui.xaml
+++ b/OscGuiControl/OscInspectorGui.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:OscGuiControl"
 						 xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+						 xmlns:osc="clr-namespace:OscTree;assembly=OscTree"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 	
@@ -14,7 +15,7 @@
 
 		<xctk:PropertyGrid.EditorDefinitions>
 
-			<xctk:EditorTemplateDefinition TargetProperties="{x:Type local:OscAddressList}">
+			<xctk:EditorTemplateDefinition TargetProperties="{x:Type osc:Routes}">
 				<xctk:EditorTemplateDefinition.EditingTemplate>
 					<DataTemplate>
 						<Grid>
