--- a/WpfDemo/MainWindow.xaml
+++ b/WpfDemo/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-				xmlns:Osc="clr-namespace:OscGuiControl;assembly=OscGuiControl"
+				xmlns:Osc="clr-namespace:OscGuiControl;assembly=OscGui"
         xmlns:local="clr-namespace:WpfDemo"
         mc:Ignorable="d"
 				Background="#3a3a3a"
@@ -19,7 +19,7 @@
 			<RowDefinition Height="80"/>
 		</Grid.RowDefinitions>
 		
-		<Osc:OscGUI x:Name="Gui1" Grid.Column="0" Grid.Row="0" Margin="5" Rows="4" Columns="4"/>
+		<Osc:OscGUI x:Name="Gui1" Grid.Column="0" Grid.Row="0" Margin="5"/>
 		<Osc:OscGUI x:Name="Gui2" Grid.Column="1" Grid.Row="0" Margin="5"/>
 		<Osc:OscInspectorGui x:Name="GuiInspector" Grid.Column="2" Grid.Row="0" Margin="5"/>
 
