--- a/WpfDemo/Tree.xaml
+++ b/WpfDemo/Tree.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:Osc="clr-namespace:OscGuiControl;assembly=OscGuiControl"
+        xmlns:Osc="clr-namespace:OscGuiControl;assembly=OscGui"
 				xmlns:local="clr-namespace:WpfDemo"
         mc:Ignorable="d"
         Title="Tree" Height="450" Width="800">
